add Delete Action

--- a/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -1,5 +1,13 @@
 ﻿@page "/category"
 @inject ICategoryRepository _categoryRepository
+@inject IJSRuntime _JS
+
+
+<BsModal OnModalConfirmation="ConfirmDelete_Click"
+         ButtonBootstrapStyle="btn-danger"
+         ButtonText="Delete"
+         Title="Are you sure you want to delete this Category?">
+</BsModal>
 
 
 @if(IsProcessing)
@@ -46,7 +54,7 @@ else
                                     <a href="@($"category/update/{obj.Id}")" class="btn btn-primary">
                                         <i class="bi bi-pencil-square"></i> Edit
                                     </a>
-                                    <button class="btn btn-danger" @* @onclick="() => HandleDelete(obj.Id)" *@>
+                                    <button class="btn btn-danger" @onclick="() => HandleDelete(obj.Id)">
                                         <i class="bi bi-trash3"></i> Delete
                                     </button>
                                 </td>
@@ -64,6 +72,7 @@ else
 
     public bool IsProcessing { get; set; } = true;
     private IEnumerable<Category> Categories = new List<Category>();
+    private int DeleteCategoryID { get; set; } = 0;
 
     protected override async  Task OnInitializedAsync()
     {
@@ -83,7 +92,33 @@ else
     }
     private async Task LoadCategories()
     {
-        Thread.Sleep(3000);
         Categories = await _categoryRepository.GetAllAsync();
     }
+    
+    private void HandleDelete(int id)
+    {
+        DeleteCategoryID = id;
+        _JS.InvokeVoidAsync("ShowConfirmationModal");
+    }
+
+    private async Task ConfirmDelete_Click(bool isConfirmed)
+    {
+        IsProcessing = true;
+        await _JS.InvokeVoidAsync("HideConfirmationModal");
+        if (isConfirmed && DeleteCategoryID != 0)
+        {
+            var result = await _categoryRepository.DeleteAsync(DeleteCategoryID);
+            if (result)
+                _JS?.ToastrSuccess("Category Delete Successfully");
+            else
+                _JS?.ToastrError("Error Encountered while deleting");
+
+            await LoadCategories();
+        }
+
+        DeleteCategoryID = 0;
+        IsProcessing = false;
+    }
+
+
 }
