add Product Module  and modify in Login and Regisger Component

--- a/YumBlazor/Components/Layout/NavMenu.razor
+++ b/YumBlazor/Components/Layout/NavMenu.razor
@@ -23,7 +23,11 @@
             </NavLink>
         </div>
 
- 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/product" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Product
+            </NavLink>
+        </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
@@ -84,4 +88,3 @@
         NavigationManager.LocationChanged -= OnLocationChanged;
     }
 }
-
