--- a/YumBlazor/Components/Pages/Home.razor
+++ b/YumBlazor/Components/Pages/Home.razor
@@ -1,5 +1,4 @@
-﻿
-@page "/"
+﻿@page "/"
 @using System.Globalization
 @using YumBlazor.Services
 @inject AuthenticationStateProvider _AuthenticationStateProvider
@@ -7,6 +6,8 @@
 @inject NavigationManager _NavigationManager
 @inject IProductRepository _productRepository
 @inject ICategoryRepository _categoryRepository
+@inject IShoppingCartRepository _cartRepository
+
 
 <PageTitle>Home</PageTitle>
 @if (IsProcessing)
@@ -78,7 +79,7 @@ else
                                 <h5 class="card-title text-center lead text-success">@prod.Name</h5>
                                 <p class="card-text mt-2">@((MarkupString)@prod.Description)</p>
                                 <h4 class="text-center">
-                                    <div class="m-lg-auto p-2" @* @onclick="()=>AddOrderItem(prod)" *@>
+                                    <div class="m-lg-auto p-2" @onclick="()=>AddOrderItem(prod)">
                                     <i class="bi bi-cart3 btn btn-success text-right  px-5 form-control" > Add to cart</i>
                                     </div>
                                 </h4>
@@ -155,33 +156,33 @@ else
         return categoryId == _selectedCategoryId ? "active" : string.Empty;
     }
 
-    // private async Task AddOrderItem(Product product)
-    // {
-    //     var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
-    //     var user = authState.User;
-    //     var authenticated = user.Identity is not null && user.Identity.IsAuthenticated;
+    private async Task AddOrderItem(Product product)
+    {
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var authenticated = user.Identity is not null && user.Identity.IsAuthenticated;
 
-    //     //if user is not authenticated then redirect to login
-    //     if (!authenticated)
-    //     {
-    //         _NavigationManager.NavigateTo("account/login");
-    //     }
-    //     else
-    //     {
-    //         //add item to cart
-    //         var userId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
-    //         var result = await 
-    //         _cartRepository.UpdateCartAsync(userId, product.Id, 1);
-    //         _SharedStateService.TotalCartCount = await _cartRepository.GetTotalCartCartCountAsync(userId);
-    //         if (result)
-    //         {
-    //             _JS?.ToastrSuccess("Product added to cart successfully");
-    //         }
-    //         else
-    //         {
-    //             _JS?.ToastrError("Error encountered");
-    //         }
-    //     }
-    // }
+        //if user is not authenticated then redirect to login
+        if (!authenticated)
+        {
+            _NavigationManager.NavigateTo("/Account/Login", forceLoad: true);
+        }
+        else
+        {
+            //add item to cart
+            var userId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+            var result = await 
+            _cartRepository.UpdateCartAsync(userId, product.Id, 1);
+          //  _SharedStateService.TotalCartCount = await _cartRepository.GetTotalCartCartCountAsync(userId);
+            if (result)
+            {
+                _JS?.ToastrSuccess("Product added to cart successfully");
+            }
+            else
+            {
+                _JS?.ToastrError("Error encountered");
+            }
+        }
+    }
 
 }   
