--- a/YumBlazor/Components/Layout/NavBar.razor
+++ b/YumBlazor/Components/Layout/NavBar.razor
@@ -16,6 +16,11 @@
 					</NavLink>
 				</li>
 				<li class="nav-item mx-2">
+					<NavLink class="nav-link" href="/order/list">
+						<span class="bi bi-card-list" aria-hidden="true"></span> Order List
+					</NavLink>
+				</li>
+				<li class="nav-item mx-2">
 					<NavLink class="nav-link" href="cart">
 						<span class="bi bi-cart3" aria-hidden="true"></span> Cart
 					</NavLink>
