--- a/YumBlazor/Components/Layout/NavMenu.razor
+++ b/YumBlazor/Components/Layout/NavMenu.razor
@@ -19,18 +19,28 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="category" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Category
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Category
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/product" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Product
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Product
+            </NavLink>
+        </div>
+        <div class="nav-item mx-2 px-3">
+            <NavLink class="nav-link" href="cart" Match="NavLinkMatch.All">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Cart
+            </NavLink>
+        </div>
+        <div class="nav-item px-3 px-3">
+            <NavLink class="nav-link" href="/order/list" Match="NavLinkMatch.All">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Order List
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="auth">
+            <NavLink class="nav-link" href="auth" Match="NavLinkMatch.All">
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
             </NavLink>
         </div>
