--- a/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
+++ b/YumBlazor/Components/Pages/Cart_Pages/Cart.razor
@@ -6,6 +6,7 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject IShoppingCartRepository _cartRepository
 @inject NavigationManager _navigationManager
+@inject IOrderRepository _orderRepository
 @attribute [Authorize]
 
 @if (IsProcessing)
@@ -133,7 +134,7 @@ else
         var user = authState.User;
         OrderHeader.Email= user.FindFirst(u => u.Type.Contains("email"))?.Value;
         OrderHeader.UserId = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
-      //  OrderHeader.Status = SD.StatusPending;
+        OrderHeader.Status = SD.StatusPending;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -171,13 +172,13 @@ else
     }
     private async Task ProcessOrderCreation()
     {
-       // IsProcessing= true;
-      //  await Task.Yield();
-       // OrderHeader.OrderDetails = SD.ConvertShoppingCartListToOrderDetail(ShoppingCarts.ToList());
+       IsProcessing= true;
+       await Task.Yield();
+       OrderHeader.OrderDetails = SD.ConvertShoppingCartListToOrderDetail(ShoppingCarts.ToList());
 
-       // var session = _paymentService.CreateStripeCheckoutSession(OrderHeader);
-      //  OrderHeader.SessionId= session.Id;
-       // await _orderRepository.CreateAsync(OrderHeader);
-      //  _navigationManager.NavigateTo(session.Url);
+      // var session = _paymentService.CreateStripeCheckoutSession(OrderHeader);
+       //OrderHeader.SessionId= session.Id;
+       await _orderRepository.CreateAsync(OrderHeader);
+     //  _navigationManager.NavigateTo(session.Url);
     }
 }
